# watersip

./: Cargo.toml  build.rs
.github/workflows/: ci.yml
app/: catalog  config
src/: lib.rs  source.rs  source_file.rs  sources.rs
